--- a/application-prod.yml
+++ b/application-prod.yml
@@ -1,8 +1,9 @@
 eureka:
   instance:
+    hostname: 13.202.64.234
     prefer-ip-address: true
   client:
     fetch-registry: true
     register-with-eureka: true
     service-url:
-      defaultZone: http://13.202.64.234/:8761/eureka
+      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
