--- a/application.yml
+++ b/application.yml
@@ -1,14 +1,14 @@
-# eureka:
-#   instance:
-#     prefer-ip-address: true
-#   client:
-#     fetch-registry: true
-#     register-with-eureka: true
-#     service-url:
-#       defaultZone: http://13.202.64.234:8761/eureka
+eureka:
+  instance:
+    prefer-ip-address: true
+  client:
+    fetch-registry: true
+    register-with-eureka: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka
 
-server:
-  port: 8085
+# server:
+#   port: 8085
        
 # eureka:
 #   instance:
@@ -20,12 +20,12 @@ server:
 #       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
 
 
-eureka:
-  instance:
-    hostname: 13.202.64.234
-    prefer-ip-address: true
-  client:
-    fetch-registry: true
-    register-with-eureka: true
-    service-url:
-      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+# eureka:
+#   instance:
+#     hostname: 13.202.64.234
+#     prefer-ip-address: true
+#   client:
+#     fetch-registry: true
+#     register-with-eureka: true
+#     service-url:
+#       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
